--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,54 @@
-.App {
+body{
+  background-color: black;
   text-align: center;
+  margin: 0;
+  font-family: 'IBM Plex Sans', sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.left-panel{
+  background-color: black;
+  width: 27%;
+  height: 100vh;
+  padding-top: 1.5vh;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.subSearch{
+  border: 1.5px solid black;
+  background-color: #2A2929;
+  border-radius: 2vh;
+  font-family: inherit;
+  font-size: 1.2rem;
+  padding: 0.25rem 0.5rem;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.bottom{
+  background-image: linear-gradient(#ff4500);
+  width: 100%;
+  height: 80vh;
+}
+
+.r-Logo{
+  border-radius: 1200vh;
+  border: 2vh solid black;
+  padding: 0vh;
+  width: 12vh;
+  height: 12vh;
+}
+
+.right-panel{
+  background-color: #ff4500;
+  width: 65%;
+  height: 100vh;
+}
+
+.submitButton{
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  border: 1.5px solid black;
+  background-color: #ff4500;
+  border-radius: 2vh;
+  font-family: inherit;
+  height: 5vh;
+  margin-top: 2vh;
+  margin-left: 7vh;
+  width: 12vh;
 }
