--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,24 @@
+
 body{
   background-color: black;
   text-align: center;
   margin: 0;
   font-family: 'IBM Plex Sans', sans-serif;
+  /*overflow-y: hidden;*/
 }
 
 .left-panel{
   background-color: black;
   width: 27%;
   height: 100vh;
-  padding-top: 1.5vh;
+  float: left;
+  /*padding-top: 1.5vh*/
 }
 
 .subSearch{
   border: 1.5px solid black;
   background-color: #2A2929;
+  color: white;
   border-radius: 2vh;
   font-family: inherit;
   font-size: 1.2rem;
@@ -27,18 +31,12 @@ body{
   height: 80vh;
 }
 
-.r-Logo{
+.left-panel .r-Logo{
   border-radius: 1200vh;
   border: 2vh solid black;
   padding: 0vh;
   width: 12vh;
   height: 12vh;
-}
-
-.right-panel{
-  background-color: #ff4500;
-  width: 65%;
-  height: 100vh;
 }
 
 .submitButton{
@@ -51,4 +49,26 @@ body{
   margin-top: 2vh;
   margin-left: 7vh;
   width: 12vh;
+}
+
+
+.right-panel{
+  background-color: black;
+  width: 73%;
+  height: 100vh;
+  float: right;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /*padding-top: 1.5vh*/
+}
+
+.graph-nodes{
+  width: 10vh;
+  height: 10vh;
+  
+  background-color: #2A2929;
+  background-image: "logo";
+  color: aliceblue;
+  border-radius: 100vh;
 }
